<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation_graph"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ssverma.covidtracker.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.ssverma.covidtracker.ui.stats.StatsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_country"
        android:name="com.ssverma.covidtracker.ui.country.CountryFragment"
        android:label="@string/title_country"
        tools:layout="@layout/fragment_country" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.ssverma.covidtracker.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
</navigation>