<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--App Info-->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/app_info_card_spacing">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="4dp"
                    android:padding="@dimen/content_spacing"
                    android:text="@string/app_info"
                    android:textAppearance="?attr/textAppearanceBody1" />

            </com.google.android.material.card.MaterialCardView>

            <!--Api label-->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/content_spacing"
                android:layout_marginTop="@dimen/content_spacing"
                android:layout_marginEnd="@dimen/content_spacing"
                android:text="@string/api"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <!--Api used-->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:padding="@dimen/content_spacing"
                android:text="@string/api_link"
                android:textAppearance="?attr/textAppearanceSubtitle1" />

            <!--CovidTracker App source code-->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/content_spacing"
                android:layout_marginEnd="@dimen/content_spacing"
                android:text="@string/app_source_code"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <!--CovidTracker App source code-->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:padding="@dimen/content_spacing"
                android:text="@string/app_source_code_link"
                android:textAppearance="?attr/textAppearanceSubtitle1" />

            <!--Developer-->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/content_spacing"
                android:layout_marginEnd="@dimen/content_spacing"
                android:text="@string/developer"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <!--CovidTracker App source code-->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:padding="@dimen/content_spacing"
                android:text="@string/developer_link"
                android:textAppearance="?attr/textAppearanceSubtitle1" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>